--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+# v2017.10.13-3 (201710133)
+* Charging control mechanism enhancements for better accuracy:
+-- Battery charging info refresh rate increases by ~66.7% if battery level is greater or equal to 75%.
+-- Discharging info refresh rate increases by 50% if battery level is less or equal to 25%.
+
 # v2017.10.13-2 (201710132)
 - [TEST-FIX] Nexus 5 compatibility
 
