--- a/TODO.txt
+++ b/TODO.txt
@@ -5,3 +5,20 @@ Hangs and reboots
   Root: SuperSU
 
 check --test (&& exitCode=0) in acc.sh
+
+cooldown_current (plus a dedicated ratio for it)
+
+realme x
+
+op7pro
+
+spreadtrum
+
+
+MTK
+
+echo 20 > /sys/devices/platform/mt-pmic/battery_percent_protect_level
+
+echo > 0 /sys/devices/platform/mt-pmic/battery_percent_protect_ut
+
+echo 10 > /sys/devices/platform/mt-pmic/battery_percent_protect_stop
