**2020.2.29-dev (202002290)** - `/sbin/acca`: acc executable for front-ends (more efficient than /sbin/acc) - `acc -F|--flash`: added support for batch zip flashing, custom path in interactive mode, and more - `acc -w#|--watch#`: monitor battery uevent (# == update time in secs, can be zero or decimal, default 3) - General optimizations - Ghost charging issue management is fully automatic - Initial work on cooldown cycle redesign (coolDownCapacity=(capacity charge/pause), coolDownCurrent=(current charge/pause), coolDownTemp=(temp charge/pause)) - Translation strings for `acc --upgrade` - Updated help text (`acc --help`) - Updated `README.md > NOTES/TIPS FOR FRONT-END DEVELOPERS`

--- a/TODO.txt
+++ b/TODO.txt
@@ -10,5 +10,9 @@ cooldown_current (plus a dedicated ratio for it)
 
 spreadtrum
 mtk
+flare s5
 
-add acc -u strings to strings.sh
+cooldown
+   (coolDownCapacity=(capacity charge/pause)
+   coolDownCurrent=(current charge/pause)
+   coolDownTemp=(temp charge/pause)
