--- a/TODO.txt
+++ b/TODO.txt
@@ -4,15 +4,15 @@ Hangs and reboots
   Busybox: v1.28.3-Stericson installed in /system/xbin
   Root: SuperSU
 
-check --test (&& exitCode=0) in acc.sh
-
-cooldown_current (plus a dedicated ratio for it)
-
 spreadtrum
-mtk
 flare s5
 
 cooldown
-   (coolDownCapacity=(capacity charge/pause)
+   coolDownCapacity=(capacity charge/pause)
    coolDownCurrent=(current charge/pause)
    coolDownTemp=(temp charge/pause)
+
+flasher - spaces
+
+current limit
+  add millivolt unit and SGS7 support
