**2020.3.9-dev (202003090)** - Block "ghost charging on steroids" (Xiaomi Redmi 3 - ido) - General optimizations - Workaround for "Magisk forgetting service.sh" issue

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,11 +8,8 @@ spreadtrum
 flare s5
 
 cooldown
-   coolDownCapacity=(capacity charge/pause)
-   coolDownCurrent=(current charge/pause)
-   coolDownTemp=(temp charge/pause)
+   cooldownCapacity=(capacity charge/pause)
+   cooldownCurrent=(current charge/pause)
+   cooldownTemp=(temp charge/pause)
 
 flasher - spaces
-
-current limit
-  add millivolt unit and SGS7 support
