--- a/TODO.txt
+++ b/TODO.txt
@@ -1,19 +1,3 @@
-Hangs and reboots
-  Samsung GT-I9082
-  Android 4.2.2
-  Busybox: v1.28.3-Stericson installed in /system/xbin
-  Root: SuperSU
-
-spreadtrum
-flare s5
-
 cooldown
-   cooldownCapacity=(capacity charge/pause)
-   cooldownCurrent=(current charge/pause)
-   cooldownTemp=(temp charge/pause)
-
-capacity_sync inconsistencies
-  incorrect battery status
-  dumpsys
-
-auto-shutdown not happening
+  cooldownTemp=(min_temp charge_seconds pause_seconds max_temp max_temp_pause)
+  cooldownCapacity=(capacity charge_seconds pause_seconds)
