**2020.3.30-dev (202003300)** - `-C|--calibrate`: charge until battery_status == "Full" - `acc -i`: fixed current_now conversion (Redmi 6 Pro and other msm8953 based devices) - `acc -u, install-latest.sh`: optional -k|--insecure flag - accd manages capacity_sync loop_delay_charging, loop_delay_discharging and switch_delay parameters dynamically - Charging switch tests take  significantly longer (switch_delay=18); this leads to more consistent results - Enable Android battery saver on capacity <= shutdown_capacity + 5 - Enriched help text (acc -h|--help) - Major optimizations - More modular design - Portability enhancements - Vibrate 3 times when an error occurs - Vibrate 5 times on capacity <= shutdown_capacity + 5, and again on each subsequent capacity drop - Vibrate 5 times when `acc --calibrate` reaches 100% - Updated documentation

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,16 @@
 cooldown
   cooldownTemp=(min_temp charge_seconds pause_seconds max_temp max_temp_pause)
   cooldownCapacity=(capacity charge_seconds pause_seconds)
+
+full POSIX compliance
+
+acc not initializing
+  logs/bootlooped?
+
+/sbin/acc/bootooped shouldn't exist
+
+install log not generated
+  harpia
+  unknown cause
+
+mistakenly created /sbin/.acc/.ghost-charging?
