**2020.3.30-r1-dev (202003301)** - Misc fixes - Preserve as many config parameters as possible across (up|down)grades

--- a/TODO.txt
+++ b/TODO.txt
@@ -14,3 +14,7 @@ install log not generated
   unknown cause
 
 mistakenly created /sbin/.acc/.ghost-charging?
+
+downgrades: patch config instead of resetting it completely
+
+vibrate on charging enabled/disabled events
