**2020.4.4-dev (202004040)** - acc -(e|d): do not do unnecessary work - acc -f: fixed capacity limit bypass - acc -F: general fixes and optimizations - accs: acc foreground service, works exactly as accd, but remains attached to the terminal - "acc -t --" is now "acc -t" - ACC/service trigger vibrations on certain events (charging enabled/disabled, errors, auto-shutdown warnings and acc -C 100% reached); vibration patterns are customizable - Auto-reset broken/invalid config - Enhanced acc -C compatibility - Fixed busybox setup issues on devices not rooted with Magisk - Misc fixes - Major optimizations - Updated documentation

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,17 +4,6 @@ cooldown
 
 full POSIX compliance
 
-acc not initializing
+sometimes, acc is not initialized
+  Magisk forgetting to run acc boot scripts?
   logs/bootlooped?
-
-/sbin/acc/bootooped shouldn't exist
-
-install log not generated
-  harpia
-  unknown cause
-
-mistakenly created /sbin/.acc/.ghost-charging?
-
-downgrades: patch config instead of resetting it completely
-
-vibrate on charging enabled/disabled events
