**v2020.4.8-beta (202004080)** - acc -t: fixed "charging-switches: no such file" error - accd: fixed crash on plug/unplug that affected some users - Current control optimizations - Enhanced battery calibration helper (acc -C) - More intuitive versioning scheme - Stricter config integrity checks (auto-reset broken config)

--- a/TODO.txt
+++ b/TODO.txt
@@ -7,3 +7,6 @@ full POSIX compliance
 sometimes, acc is not initialized
   Magisk forgetting to run acc boot scripts?
   logs/bootlooped?
+
+Try out Termux API
+  acc as Termux module
