**v2020.4.17-beta (202004170)** - acc -C: replace misleading 100% with 99% - acc -s: restoring individual defaults is as simple as running `acc -s var1= var2= ...` - Auto-shutdown: run `/system/bin/reboot -p` as fallback - autoShutdownAlertCmd, calibrationAlertCmd, chargDisabledNotifCmd, chargEnabledNotifCmd, errorAlertCmd - Termux APIs can be used for notifications, TTS, toasts and more; for details, refer to https://wiki.termux.com/wiki/Termux:API - Enhanced config auto-backup - Fixed stable-beta config migration error - General fixes and optimizations - Updated documentation

--- a/TODO.txt
+++ b/TODO.txt
@@ -8,5 +8,27 @@ sometimes, acc is not initialized
   Magisk forgetting to run acc boot scripts?
   logs/bootlooped?
 
-Try out Termux API
-  acc as Termux module
+Termux APIs
+
+# getval index $var
+getval() {
+  local index=$1
+  shift
+  eval "echo \$$index"
+}
+
+# setval index val var
+setval() {
+  local val_=$1 val="$2" values="" var=$3
+  shift 3
+  values="$(eval "echo \$$var")"
+  val_="$(getval $val_ $values)"
+  eval $var=\""${values/$val_/$val}"\"
+}
+
+enforce default values on null
+
+alert cmds
+  doc and print-config.sh
+
+AccA and encryption
