**v2020.4.20-beta (202004200)** - Blacklisted troublesome Pixel [1-3]* charging switches - Fixed absurd charging current and voltage reports (AccA) - Fixed upgrade and downgrade issues (AccA) - Include AccA logcat in log archive - Optimized installers - prioritizeBattIdleMode=true by default - Removed `acc --calibrate`, in favor of universal and comprehensive calibration instructions (README > FAQ) - Under the hood enhancements - Updated documentation - Workaround for encryption preventing AccA from initializing ACC

--- a/TODO.txt
+++ b/TODO.txt
@@ -4,12 +4,6 @@ cooldown
 
 full POSIX compliance
 
-sometimes, acc is not initialized
-  Magisk forgetting to run acc boot scripts?
-  logs/bootlooped?
-
-Termux APIs
-
 # getval index $var
 getval() {
   local index=$1
@@ -26,9 +20,6 @@ setval() {
   eval $var=\""${values/$val_/$val}"\"
 }
 
-enforce default values on null
-
-alert cmds
-  doc and print-config.sh
-
-AccA and encryption
+install.sh
+  remove legacy cp
+  upgrade acc_bundle.tar.gz and install-tarball.sh
