**v2020.5.4-rc (202005040)** `--set` can now set (var=value) and restore (var=) current and voltage limits as well, e.g., `acc -s mcc=1800 mcv= pc=75 rc=70` - `--set [[a-z]|--opt]` commands can alternatively be written as `-s[a-z]`, e.g., `acc -sv 3920 --exit` - Current & voltage limit and battery idle mode test now work in AccA 1.0.23 (27) - Enhanced "charge once to a given capacity without restrictions" feature - Major fixes & optimizations - Send SIGKILL 5 seconds after SIGTERM to forcibly terminate stubborn acc processes - Write to each ctrl file 3 times (with 200 milliseconds delays in-between) instead of just once; this is an attempt to force changes that don't take effect immediately or at all

--- a/TODO.txt
+++ b/TODO.txt
@@ -21,5 +21,7 @@ setval() {
 }
 
 install.sh
-  remove legacy cp
   upgrade acc_bundle.tar.gz and install-tarball.sh
+
+build.sh
+  remove legacy cp (install-current.sh)
