**v2020.6.14 (202006140)** - `acca --set var="value"` runs asynchronously - Android 11 support (absolute path required until system reboots (e.g., `/dev/acc`, `/dev/acca`)) - capacity_freeze2 (cft): prevents Android from getting capacity readings below 2%; useful on systems that shutdown before battery level drops to 0 or 1% - `ctrlFileWrites=(times interval)`, defaults are 3 and 0.3 - Current and voltage limits can be set from AccA, but not restored; until AccA is updated, use `acc -s<c|v> -` to revert changes - Daemon stop actions run asynchronously to speed up the process - Dynamically determine battery uevent path - Enforce max switch_delay 20 for mtk devices; `acc --test` will use that (7 is default for other devices) - Exclude parallel/ control files - Fallback busybox (`/data/adb/bin/busybox`) is now used as primary - `fg_full_voltage` ctrl file - Fixed `acc -ss` "extra values" issue - Fixed AccA log activity - Fixed MediaTek specific bugs - Idle mode for Pixel 2/XL and devices with similar hardware - If AccA is installed, `install.sh` ensures `/data/data/mattecarra.accapp/files/` exists before installing/upgrading acc; this prevents unwanted acc downgrades - Job control based on lock file - Legacy support (Android 4.0+) - loop_cmd: extends accd's functionality (advanced users, details in the readme) - Non-Magisk users can enable acc auto-start by running /data/adb/$id/service.sh, a copy of, or a link to it - with init.d or an app that emulates it - Place temporary files in /dev, rather than /sbin (deprecated) - Potential workaround for "graceful shutdown not working" - Power supply logger: learn to skip reading troublesome /sys files (prevents kernel panic); [re]generate log file only on errors and when the log exporting command is executed - Prevent future AccA versions from downgrading/reinstalling modules - Removed capacitySync (already automatic) and capacityOffset controls - Static binaries like busybox and curl can simply be placed in /data/adb/bin/; a

--- a/TODO.txt
+++ b/TODO.txt
@@ -2,8 +2,6 @@ cooldown
   cooldownTemp=(min_temp charge_seconds pause_seconds max_temp max_temp_pause)
   cooldownCapacity=(capacity charge_seconds pause_seconds)
 
-full POSIX compliance
-
 # getval index $var
 getval() {
   local index=$1
@@ -23,5 +21,4 @@ setval() {
 install.sh
   upgrade acc_bundle.tar.gz and install-tarball.sh
 
-build.sh
-  remove legacy cp (install-current.sh)
+remove "# legacy"
