--- a/TODO.txt
+++ b/TODO.txt
@@ -10,14 +10,14 @@ alternate charging control logic
   disable_charging() {
     maxChargingCurrent0=${maxChargingCurrent[0]-}
     set +e
-    set_ch_curr 0 > /dev/null 2>&1
+    set_ch_curr 0
     set -e
     touch $TMPDIR/.ch-disabled
   }
 
   enable_charging() {
     set +e
-    set_ch_curr ${maxChargingCurrent0:--} > /dev/null 2>&1
+    set_ch_curr ${maxChargingCurrent0:--}
     set -e
     rm $TMPDIR/.ch-disabled
   }
