--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,9 @@
 notifications
   resume_capacity and more
--e and -d, voltage support
-profiles
-reduce array usage
-adaptive charging
+
 allow any current and voltage values
+
+kindle e-readers support
+  /mnt/us
+
+scheduled bms calibration
